fix(pages): custom scrollbar

--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -33,6 +33,29 @@ code {
   scrollbar-width: none;
 }
 
+.custom-scroll::-webkit-scrollbar-button {
+  display: none;
+}
+
+.custom-scroll::-webkit-resizer {
+  display: none;
+  visibility: hidden;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 3px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  width: 0;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #333333;
+  opacity: 40%;
+  border-radius: 2.5px;
+}
+
 .spinner {
   display: flex;
   position: relative;
